--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "kontact": "^0.2.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
