--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.0.4",
     "kontact": "^0.2.2",
     "vue": "^2.5.2",
     "vue-analytics": "^5.12.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
